finish wiki and profile

--- a/blueteam/app/src/main/res/layout/fragment_wiki.xml
+++ b/blueteam/app/src/main/res/layout/fragment_wiki.xml
@@ -7,28 +7,26 @@
     android:orientation="vertical"
     tools:context="com.blueteam.BluetoothChat">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="50dp"
-    android:orientation="vertical"
-    >
 <!--  https://www.spine-health.com/  -->
+
+    <WebView
+        android:id="@+id/web"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </WebView>
+
     <ImageButton
         android:id="@+id/spine_health"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:background="@drawable/spine_health"
-        android:layout_weight="1"
         android:scaleType="fitXY"
         />
-
 
     <ImageButton
         android:id="@+id/workout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_height="200dp"
         android:background="@drawable/workout"
         android:scaleType="fitXY"
         />
@@ -36,11 +34,9 @@
     <ImageButton
         android:id="@+id/recovery"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_height="200dp"
         android:background="@drawable/recovery"
         android:scaleType="fitXY"
         />
-</LinearLayout>
 
 </LinearLayout>
