--- a/blueteam/app/src/main/res/layout/activity_bluetooth_chat_layout.xml
+++ b/blueteam/app/src/main/res/layout/activity_bluetooth_chat_layout.xml
@@ -27,12 +27,23 @@ android:background="@drawable/button"
                 android:id="@+id/search"
                 android:layout_width="85dp"
                 android:layout_height="45dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="40dp"
                 android:layout_marginTop="12dp"
                 android:background="@drawable/bg"
                 android:text="@string/search"
                 android:textColor="@color/white"
                 android:textSize="10dp" />
+
+
+            <Button
+                android:id="@+id/calibrate"
+                android:layout_width="150dp"
+                android:layout_height="45dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginLeft="100dp"
+                android:text="Calibrate"
+                android:textSize="10dp"
+                />
 
             <Button
                 android:id="@+id/discoverable1"
@@ -45,10 +56,12 @@ android:background="@drawable/button"
                 android:text="@string/discoverable1"
                 android:textColor="#04c9e2"
                 android:textSize="15dp"
-
                 android:visibility="invisible" />
 
+
         </LinearLayout>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
