--- a/blueteam/app/src/main/res/layout/fragment_now.xml
+++ b/blueteam/app/src/main/res/layout/fragment_now.xml
@@ -34,6 +34,19 @@
                 android:textColor="@color/white"
                 android:textSize="10dp" />
 
+
+            <Button
+                android:id="@+id/calibrate"
+                android:layout_width="150dp"
+                android:layout_height="45dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginLeft="100dp"
+                android:text="Calibrate"
+                android:textSize="10dp"
+                />
+
+
+
             <Button
                 android:id="@+id/discoverable1"
                 android:layout_width="85dp"
