--- a/blueteam/app/src/main/res/layout/fragment_profile.xml
+++ b/blueteam/app/src/main/res/layout/fragment_profile.xml
@@ -7,11 +7,117 @@
     tools:context="com.blueteam.BluetoothChat"
     android:orientation="vertical">
 
-    <TextView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:text="hello profile"/>
+        android:orientation="horizontal"
+        android:layout_marginTop="100dp"
+        android:layout_gravity="center_horizontal"
+        >
+        <!--  photo  -->
+        <ImageView
+            android:layout_width="82.0dip"
+            android:layout_height="82.0dip"
+            android:layout_centerInParent="true"
+            android:contentDescription="@null"
+            />
+
+        <com.blueteam.view.CircularImage
+            android:id="@+id/cover_user_photo"
+            android:layout_width="74.0dip"
+            android:layout_height="74.0dip"
+            android:layout_marginLeft="90dp"
+            android:layout_centerInParent="true" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dip"
+            android:layout_marginRight="40dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="5dp"></View>
+
+    </LinearLayout>
+
+
+<!--  view for separation  -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="5dp"></View>
+
+
+    <TextView
+        android:id="@+id/alias"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="Andy"
+        android:textSize="20dp"
+        />
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="#83738F"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"></View>
+
+
+    <TextView
+        android:id="@+id/logged_in"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="admin"
+        android:textSize="20dp"
+        />
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="#83738F"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"></View>
+
+
+    <TextView
+        android:id="@+id/email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="haobo.liu@ucdconnect.ie"
+        android:gravity="center_horizontal"
+        android:textSize="20dp"
+        />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="#83738F"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"></View>
+
+    <TextView
+        android:id="@+id/location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Dublin"
+        android:gravity="center_horizontal"
+        android:textSize="20dp"
+        />
+
 
 
 </LinearLayout>
